# hermes-lifemodel

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DOLT_REMOTE.md  Makefile  __init__.py  activity.py  after-install.md  composition.py  config.py  conftest.py  debug.py  egress_service.py  events.py  gateway_core.py  heartbeat.py  hooks.py  log.py  manifest  plugin.yaml  pyproject.toml  smoke.py  state_commands.py  stats_view.py  tick.py  trace_view.py
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.claude/: settings.json
.codegraph/: daemon.pid
adapters/: __init__.py  being_platform.py  delivery.py  internal_runner.py  origin.py  owner_tz.py  plugin_llm_adapter.py  reachin.py  session_end.py  signal_bus.py  soul_file.py  trace_export.py  tracer.py
core/: __init__.py  act_gate.py  affect.py  aggregation.py  aggregator.py  appraisal.py  backstop.py  belief_view.py  budget.py  buffer_store.py  circadian.py  cognition.py  commitment_view.py  component.py  contact_neuron.py  contact_sensor.py  coreloop.py  correlate.py  decision.py  desire_view.py  energy.py  felt_display.py  frame.py  genesis.py  idempotency.py  intake.py  intention_view.py  intents.py  internal_cognition.py  introspect.py  invalidation.py  llm_port.py  metrics.py  neuron.py  noticing.py  noticing_buffer.py  observer.py  output_lint.py  personality.py  pressure.py  (+29 more)
docs/: README.md  business-requirements.md  glossary.md  hermes-references.md  hla.md  roadmap.md
docs/adr/: 0001-token-attribution-and-cognition-seam.md  0002-soul-lives-in-soul-md.md
docs/superpowers/plans/: 2026-07-04-lifemodel-proactive-egress.md  2026-07-05-wire-desire-model-into-plugin.md  2026-07-06-core-phase-a-skeleton.md  2026-07-06-core-phase-b1-signal-pipeline-contact-neuron.md  2026-07-06-core-phase-b2-aggregation-desire-lifecycle.md  2026-07-06-core-phase-b3-aggregation-backpressure.md  2026-07-06-core-phase-c1-latent-effective-actionpending.md  2026-07-06-core-phase-c2-personality-energy.md  2026-07-06-core-phase-d1-cognition-voice.md  2026-07-06-core-phase-d2-backstop-async-invalidation.md  2026-07-06-core-phase-e1-cutover-prep.md  2026-07-06-core-phase-e2-aggregation-cutover-ready.md  2026-07-06-core-phase-e3-live-cutover.md  2026-07-06-core-phase-e4-debug-rewrite-delete-monolith.md  2026-07-06-core-phase-e5-codex-fixes.md  2026-07-06-lifemodel-being-as-platform-adapter.md  2026-07-08-living-impulse-lm-8o3.md  2026-07-11-phase2-close-last-wake-outcome-and-smoke-probe.md  2026-07-13-phase4-genesis.md  2026-07-16-internal-cognition-seam-lm-705-6.md  2026-07-16-waking-mind-slice1-thought-capture.md  2026-07-16-waking-mind-slice2-thought-processing.md  2026-07-17-belief-track-v1.md  2026-07-17-durable-noticing-buffer.md  2026-07-17-waking-mind-slice3-crystallization.md  2026-07-17-waking-mind-slice5-noticing.md  2026-07-18-commitment-track-v1.md  2026-07-18-turn-observability.md  2026-07-18-waking-mind-thought-capture.md
docs/superpowers/specs/: 2026-07-03-nika-hermes-reincarnation-design.md  2026-07-04-lifemodel-proactive-egress-design.md  2026-07-04-proactive-contact-desire-model-design.md  2026-07-05-lifemodel-debug-personality-view-design.md  2026-07-06-core-engine-design.md  2026-07-06-lifemodel-being-as-platform-adapter-design.md  2026-07-08-core-single-spine-design.md  2026-07-09-observability-core-invariant-design.md  2026-07-10-durable-signal-bus-design.md  2026-07-10-telemetry-core-design.md  2026-07-11-fail-loud-observability-foundation-design.md  2026-07-11-phase2-close-last-wake-outcome-and-smoke-probe-design.md  2026-07-11-sensory-core-rethink-design.md  2026-07-11-unified-time-single-helper-iso-design.md  2026-07-12-ukc4-reactive-felt-state.md  2026-07-13-phase4-genesis-design.md  2026-07-16-waking-mind-attention-economy-design.md  2026-07-16-waking-mind-noticing-internal-cognition-design.md  2026-07-17-fact-track-design.md  2026-07-18-turn-observability-design.md  (+1 more)
domain/: __init__.py  act.py  egress.py  layer.py  memory.py  session.py  signal.py
domain/objects/: __init__.py  base.py  belief.py  commitment.py  desire.py  errors.py  inference.py  intention.py  provenance.py  registry.py  relationship.py  thought.py  user_model.py
ports/: __init__.py  clock.py  delivery.py  memory.py  pressure.py  proactive.py  tick_commit.py  trace_export.py  tracer.py
sim/: __init__.py  harness.py
src/lifemodel/: __init__.py  composition.py  debug.py  egress_service.py  events.py  gateway_core.py  heartbeat.py  hooks.py  impulse.py  logging.py  paths.py  plugin.yaml  tick.py
state/: __init__.py  brain_health.py  brain_liveness.py  errors.py  json_store.py  metrics_store.py  model.py  port.py  soul_revisions.py  sqlite_store.py  trace_store.py  wiring.py
testing/: __init__.py  appraisal.py  desires.py  fakes.py  harness.py  intentions.py  llm.py  relationships.py  thoughts.py  tick.py  user_model.py
tests/: _hermes_probe.py  conftest.py  gateway_stubs.py  hermes_genesis_prompt_integration.py  hermes_heartbeat_integration.py  hermes_internal_cognition_integration.py  hermes_reachin_integration.py  hermes_wake_delivery_integration.py  test_acceptance.py  test_active_span.py  test_activity_view.py  test_affect.py  test_aggregation.py  test_aggregator_threshold.py  test_appraisal.py  test_backstop.py  test_being_platform_fail_loud.py  test_being_platform_internal_cognition.py  test_being_platform_register_smoke.py  test_belief_harness.py  test_belief_injector.py  test_belief_object.py  test_belief_view.py  test_birth_voice.py  test_brain_health.py  test_brain_liveness_view.py  test_budget.py  test_budget_processing.py  test_buffer_store_sqlite.py  test_capture_thoughts.py  test_circadian.py  test_cognition.py  test_commitment_harness.py  test_commitment_injector.py  test_commitment_object.py  test_commitment_tool.py  test_commitment_view.py  test_component.py  test_composition.py  test_config.py  (+159 more)
tests/architecture/: test_trace_invariants.py
tests/sim/: test_sim_aggregation.py  test_sim_drive.py  test_sim_harness.py  test_sim_quality.py  test_sim_scenarios.py  test_sim_wake.py
(+29 files in other folders)
