[project]
name = "hermes-lifemodel"
version = "0.0.0"
description = "Personality-and-decision layer plugin on top of the Hermes agent body."
requires-python = ">=3.11,<3.12"
# Runtime deps are deliberately empty: the plugin is loaded inside Hermes' own
# interpreter (from ~/.hermes/plugins/), not pip-installed into Hermes' venv, so
# anything Hermes already provides is not vendored here. Runtime logging is
# stdlib-only (spec §v1.2 / lm-edu): SpanLogger + logging.getLogger, no
# structlog/loguru anywhere — not even as a dev dep.
dependencies = []

# Flat root-layout: this repo directory IS the `lifemodel` package (no
# build/wheel step — Hermes' PluginManager loads the install directory's
# __init__.py + plugin.yaml directly via `hermes plugins install/update`).

# Dev toolchain (PEP 735). `uv sync` installs the `dev` group by default, so
# `uv run ruff/mypy/pytest` work without an extra flag.
[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "mypy",
    "ruff",
    "pre-commit",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = [".", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

# Flat root-layout: the `lifemodel` package IS the repo directory, so ruff's
# isort can't auto-detect it as first-party from `src` (it looks for a
# `lifemodel` entry *inside* the src dirs, not the src dir's own name).
# Declaring it explicitly keeps `import lifemodel` / `from lifemodel.x import`
# grouped after third-party imports everywhere (tests included).
[tool.ruff.lint.isort]
known-first-party = ["lifemodel"]

[tool.mypy]
python_version = "3.11"
strict = true
# Flat root-layout: the repo directory itself IS the `lifemodel` package. `-p lifemodel`
# must locate a top-level package named `lifemodel`, but the checkout dir may be named
# anything (dev worktrees). Rather than a leaf-name-dependent `mypy_path = ".."`, the
# `make mypy` target presents a canonical view via a temporary `lifemodel` symlink on
# MYPYPATH (see Makefile) — so type-checking never depends on the checkout dir name.
# `--explicit-package-bases` requires `--namespace-packages` and is only
# needed when a package root lacks `__init__.py`; ours doesn't, so it's left
# off. `tests/` sits directly under the repo root (== the package dir) and has
# no `__init__.py` of its own — with mypy's default namespace-packages
# discovery on, `-p lifemodel`'s recursive walk would treat it as an implicit
# `lifemodel.tests` subpackage and pull every test file into the strict gate.
# Disabling namespace packages excludes it; our real subpackages all have
# `__init__.py`, so they're unaffected.
namespace_packages = false

# The Hermes runtime is not a pip dependency — the plugin is loaded inside
# Hermes' interpreter. Treat its packages as untyped so `mypy --strict` does
# not fail on missing stubs for host-provided modules.
[[tool.mypy.overrides]]
module = [
    "hermes.*",
    "hermes_cli.*",
    "hermes_constants",
    "hermes_time",
    "cron.*",
    "agent.*",
    "tools.*",
    "gateway.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=lifemodel --cov-report=term-missing"

[tool.coverage.run]
source = ["lifemodel"]
branch = true

[tool.coverage.report]
show_missing = true
